--- a/src/app/keyboard/keyboard.component.scss
+++ b/src/app/keyboard/keyboard.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Coiny&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
 .app-keyboard {
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
         padding: 5px;
         color: #ffffff;
         background-color: lightgray;
-        font-family: "Coiny", cursive;
+        font-family: 'Titan One', cursive;
         text-transform: uppercase;
         font-size: 18px;
         border: solid 1px darkgrey;
