--- a/src/app/game-table/game-table.component.scss
+++ b/src/app/game-table/game-table.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Coiny&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
 .app-game-table {
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
         padding: 5px;
         color: #ffffff;
         border: solid 2px darkgrey;
-        font-family: 'Coiny', cursive;
+        font-family: 'Titan One', cursive;
         text-transform: uppercase;
         font-size: 25px;
         span {
