--- a/src/app/game-board/game-table/game-table.component.scss
+++ b/src/app/game-board/game-table/game-table.component.scss
@@ -3,11 +3,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    &-row {
+    &-word {
         display: flex;
         flex-direction: row;
     }
-    &-key {
+    &-letter {
         display: flex;
         flex-direction: row;
         align-items: center;
