--- a/src/app/game-board/game-statistics/game-statistics.component.scss
+++ b/src/app/game-board/game-statistics/game-statistics.component.scss
@@ -1,25 +1,11 @@
+@import '../../shared/styles/mixin.scss';
+
 .app-gameStatistics {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
+    @include staticPageRoot();
     &-content {
-        position: relative;
-        width: 500px;
-        margin: 0 auto;
-        margin-top: 30px;
-        // text-align: center;
+        @include staticPageContent();
     }
     &-closeButton {
-        position: absolute;
-        top: 20px;
-        right: 0px;
-        border: none;
-        background-color: transparent;
-        cursor: pointer;
+        @include closeButton();
     }
 }
