Add dark theme and theme toggle button

--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -1,6 +1,7 @@
 <div class="app-gameBoard-header">
   <div class="app-gameBoard-title"> Wordle </div>
-  <div>
+  <div  class="app-gameBoard-header-actions">
+    <app-theme-toggle></app-theme-toggle>
     <button (click)="showStatistics=true"><img src="./assets/leaderboard_black.svg"></button>
     <button (click)="showHelp=true"><img src="./assets/help_black.svg"></button>
   </div>
