--- a/src/app/game-board/game-help/game-help.component.html
+++ b/src/app/game-board/game-help/game-help.component.html
@@ -7,30 +7,30 @@
   <h2> Examples</h2>
   <div class="app-gameHelp-table-word">
     <div class="app-gameHelp-table-letter correct"> <span>W</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>E</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>A</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>R</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>Y</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>E</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>A</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>R</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>Y</span> </div>
   </div>
   <p>The letter W is in the word and in the correct spot.</p>
   <div class="app-gameHelp-table-word">
-    <div class="app-gameHelp-table-letter default"> <span>P</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>P</span> </div>
     <div class="app-gameHelp-table-letter present"> <span>i</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>l</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>l</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>s</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>l</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>l</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>s</span> </div>
   </div>
   <p>The letter I is in the word but in the wrong spot.</p>
   <div class="app-gameHelp-table-word">
-    <div class="app-gameHelp-table-letter default"> <span>V</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>A</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>G</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>V</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>A</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>G</span> </div>
     <div class="app-gameHelp-table-letter not-present"> <span>u</span> </div>
-    <div class="app-gameHelp-table-letter default"> <span>e</span> </div>
+    <div class="app-gameHelp-table-letter filled"> <span>e</span> </div>
   </div>
   <p>The letter U is not in the word in any spot.</p>
   <hr />
   <p>A new WORDLE will be available each day!</p>
   <button (click)="closeHelp()"
-          class="app-gameStatistics-closeButton"><img src="./assets/clear_black.svg"></button>
+          class="app-gameHelp-closeButton"><img src="./assets/clear_black.svg"></button>
 </div>
