Use localStorage to save user progress and results, add Help and Statistics pages, add Dark theme options (#2)
* update deployment

* update docs

* Update coockies and update statistics

* Use localStorage instead of coockies

* Create Help and statistics components

* Update styles - use variables and mixins

* Add dark theme and theme toggle button

* update docs

Co-authored-by: Alin <alin.frunza@arnia.ro>

--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -1,2 +1,21 @@
-<app-game-table></app-game-table>
-<app-keyboard></app-keyboard>
+<div class="app-gameBoard-header">
+  <div class="app-gameBoard-title"> Wordle </div>
+  <div  class="app-gameBoard-header-actions">
+    <app-theme-toggle></app-theme-toggle>
+    <button (click)="showStatistics=true"><img src="./assets/leaderboard_black.svg"></button>
+    <button (click)="showHelp=true"><img src="./assets/help_black.svg"></button>
+  </div>
+</div>
+
+<div class="app-gameBoard-content">
+  <app-game-table></app-game-table>
+  <app-keyboard></app-keyboard>
+</div>
+
+<ng-container *ngIf="showStatistics">
+  <app-game-statistics (closeStatisticsEvent)="showStatistics=false"></app-game-statistics>
+</ng-container>
+
+<ng-container *ngIf="showHelp">
+  <app-game-help (closeHelpEvent)="showHelp=false"></app-game-help>
+</ng-container>
